fix: csv import extension dark mode

--- a/packages/nc-gui/assets/css/theme-overrides.scss
+++ b/packages/nc-gui/assets/css/theme-overrides.scss
@@ -117,6 +117,10 @@ body {
   background: rgb(var(--rgb-color-brand-500));
 }
 
+.ant-progress-text {
+  color: rgba(var(--rgb-base), 0.85);
+}
+
 /* windicss layer base */
 @layer base {
   [theme='dark'] {
